# satonewsnetsite

./: .gitignore  Cargo.toml  Rocket.toml  articles.db-journal
src/: data.rs  main.rs  site.rs  util.rs
static/: article.css  article_previews.css  edit.css  edit_article.js  edit_newspaper.js  menu.css  newspaper.css  newspaper.js  render_article.js
static/pages/: about.html  home.html  submissions.html
templates/: article.html.hbs  edit.html.hbs  edit_article.html.hbs  menu.html.hbs  newspaper.html.hbs
